syntax = "proto3";

package indexgatewaypb;

import "pkg/logproto/logproto.proto";

service IndexGateway {
    /// QueryIndex reads the indexes required for given query & sends back the batch of rows
    /// in rpc streams
    rpc QueryIndex(QueryIndexRequest) returns (stream QueryIndexResponse);

    /// GetChunkRef returns chunk reference that match the provided label matchers
    rpc GetChunkRef(GetChunkRefRequest) returns (stream logproto.ChunkRef) {};
}

message QueryIndexResponse {
    string QueryKey = 1;
    repeated Row rows = 2;
}

message Row {
    bytes rangeValue = 1;
    bytes value      = 2;
}

message QueryIndexRequest {
    repeated IndexQuery Queries = 1;
}

message IndexQuery {
    string tableName          = 1;
    string hashValue          = 2;
    bytes rangeValuePrefix    = 3;
    bytes rangeValueStart     = 4;
    bytes valueEqual          = 5;
}

message GetChunkRefRequest {

  // TODO: Think if unique fingerprint might make sense
}
